; ModuleID = '/home/carl/AnghaBench/h2o/deps/libgkc/extr_test.c_print_query.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libgkc/extr_test.c_print_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gkc_summary = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"queried: %.02f, found: %.02f\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_query(%struct.gkc_summary* %0, double %1) #0 {
  %3 = alloca %struct.gkc_summary*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store %struct.gkc_summary* %0, %struct.gkc_summary** %3, align 8
  store double %1, double* %4, align 8
  %6 = load %struct.gkc_summary*, %struct.gkc_summary** %3, align 8
  %7 = load double, double* %4, align 8
  %8 = call double @gkc_query(%struct.gkc_summary* %6, double %7)
  store double %8, double* %5, align 8
  %9 = load i32, i32* @stderr, align 4
  %10 = load double, double* %4, align 8
  %11 = load double, double* %5, align 8
  %12 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), double %10, double %11)
  ret void
}

declare dso_local double @gkc_query(%struct.gkc_summary*, double) #1

declare dso_local i32 @fprintf(i32, i8*, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
